--- a/sakamoto.html
+++ b/sakamoto.html
@@ -172,7 +172,7 @@
            
         </header>
         <div class="content">
-            <img src="img/Sakamoto.jpg" alt="Sakamoto">
+            <img src="img/sakamoto.jpg" alt="Sakamoto">
             <div class="details">
                 <h1>SAKAMOTO DAYS</h1>
                 <h2>YUTO SUZUKI</h2>
