--- a/naruto.html
+++ b/naruto.html
@@ -172,7 +172,7 @@
            
         </header>
         <div class="content">
-            <img src="img/Naruto.jpg" alt="One Piece">
+            <img src="img/naruto.jpg" alt="One Piece">
             <div class="details">
                 <h1>Naruto</h1>
                 <h2>MASASHI KISHIMOTO</h2>
